# Dixit-Drillstring-Model-2023

./: EM_drill_sim_input_sheet.xlsx  README.md
Documentation/: Instructions.md
Tests/Pumps Off/Off Bottom/BHA/Test_Case_0_V/Input/: EM_drill_sim_input_sheet.xlsx
Tests/Pumps Off/Off Bottom/BHA/Test_Case_1_D/Input/: EM_drill_sim_input_sheet (1).xlsx
Tests/Pumps Off/Off Bottom/NO_BHA/Test_Case_2_V/Input/: EM_drill_sim_input_sheet.xlsx
Tests/Pumps Off/Off Bottom/NO_BHA/Test_Case_3_D/Input/: EM_drill_sim_input_sheet.xlsx
Tests/Pumps Off/On Bottom/BHA/Test_Case_4_V/Input/: EM_drill_sim_input_sheet.xlsx
Tests/Test 4b Alternate Cases/4b_A1/Input/: EM_drill_sim_input_sheet.xlsx
Tests/Test 4b Alternate Cases/4b_A2/Input/: EM_drill_sim_input_sheet.xlsx
Tests/Test 4b Alternate Cases/4b_A3/Input/: EM_drill_sim_input_sheet.xlsx
Tests/Test 4b Alternate Cases/4b_A4/Input/: EM_drill_sim_input_sheet.xlsx
Tests/Test Cases/Inclined/Input/: EM_drill_sim_input_sheet.xlsx
Tests/Test Cases/Inclined_BHA/Input/: EM_drill_sim_input_sheet.xlsx
Tests/Test Cases/Vertical/Input/: EM_drill_sim_input_sheet.xlsx
Tests/Test Cases/Vertical_BHA/Input/: EM_drill_sim_input_sheet.xlsx  nnn.xlsx
drillsim-main/: EM_drill_sim_input_sheet.xlsx  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
drillsim-main/drillsim/: __init__.py  assembly.py  constants.py  driver.py  solver.py  visualize.py
drillsim-main/drillsim/models/: __init__.py  bitrock.py  coulomb.py  friction.py
drillsim-main/examples/: scratch_pad.ipynb
(+2 files in other folders)
