[metadata]
name = drillsim
version = 1.0.0
author = Anirban Manna
author_email = anirban.manna@exxonmobil.com
description = Drilling simulator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Exxonmobil/drillsim/
classifiers =
    Programming Language :: Python :: 3
    License :: ExxonMobil Upstream Research Company
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
setup_requires =
  setuptools>=50.3.2
  setuptools-declarative-requirements
  wheel

[requirements-files]
install_requires = requirements.txt

[options.data_files]
. = requirements.txt
